@@ -4,26 +4,16 @@ Hash: SHA256
 DIST perl-cleaner-2.14.tar.bz2 6067 SHA256 d941fb6c4dc168b5192cba31e0c68a5e1642fe67c04d7b3ad09d03742e9bd3fc SHA512 a4d0ee749712e4f0c4a6acfd08be9091d440fdc2aba34f5c82952123a133201f812ef9e893b6e06652a21601a0ef84e6b4ee92251e0a0520c4f03963b0f72f9a WHIRLPOOL 4c2620fa7ca73ccb95061ed81951f1d7563cffd0966d01d95d7786e81f7dec081364f980d127f619e335c8a74cebaef8d5ff20e5cbf6c7e3e0256c8655031a72
 DIST perl-cleaner-2.15.tar.bz2 6165 SHA256 20371908fd19b08e90ec282dc9ceba90e01655336444ebb22c7a432bcb81adb1 SHA512 58bda82808b8213019a0807cedba30b10fceda04a256f268a654bba8328ab11eb3c7b8a33046d7a24147f2b35d8a53ce86ad30efb0c77d5598f185c3a5d6a797 WHIRLPOOL 9a37d200c144eea0121beea816778b9bd3244cac1c88ada8a6854cc661d9f0071c113a5099df1a0ba6ed1bfeb00a2201308762422d85ac2f0d3a6eb9f0a467f9
 EBUILD perl-cleaner-2.14.ebuild 722 SHA256 2a6667206441800f2a0a2dbdfcbf6a2c192f0cb3d1b7c4d241ff2a7ee3f3d9aa SHA512 3ecdeedd240e18d3a611f0711ce18ad14ec514c595fecb8bdd087df3f122de554e435107fadc3e02a6e805f837fdaac7895ad91c5281334c297598a7dae4e9c5 WHIRLPOOL 6c8990793ab1afb788ef407235c82d2138ac702f5630e4ce8f73690722e9624a204d009c99ce4b988d6e4b9dccc36a277286441950da56fa40bd981ff6a0e252
-EBUILD perl-cleaner-2.15.ebuild 926 SHA256 ff2a32858e7b7999a264c5b7c54a544bc5c8d8914e8dc0cdb84986b8506d4727 SHA512 d16f25f4df921252b206cb5dd5f448b7b8dd06cec6ebc3ba59631f16a4d4f05bc75ad64a9bd697f4d900b6a4e847d6a40b0a10b860f50b48147d8bf2d1c1d66c WHIRLPOOL 1e0c5b3d00205636f5caa8b240e8ec3e025ced367b2ed2c8bd9ecb6c00ca5d82663b65e978fe1c5867dcdf0fa17aecf70662048cccea3dbc9277d087102bfc3c
+EBUILD perl-cleaner-2.15.ebuild 915 SHA256 28ee08d2bc2600a02a95ce403c51fc5d4faf05eb166a4a3a93e59ef32ef6cafa SHA512 6f78754b40c67ae244e1d4484408effeda3ffe7e21b97599dda4d09357aaae50e17258e8022aa8333bbfdfb2be4627c79c0b7e17a12b2e6e2647b0ed146e7148 WHIRLPOOL 13b5eb8ea711a7aafd98b12db44a23716b761a62eb4fcbbecf55656909dd6503dd979a4c6e14defc3161c2b6569d2525b898741e7268dea2a765a3af6029ed53
 EBUILD perl-cleaner-9999.ebuild 926 SHA256 dfe87e041d5f9b1546c2d45a9b08e371d9bf07b243f57dff57409bd08b470890 SHA512 b205b342899d592ce9a80db0ade1c4102db76e639bac1e3f2958c78eb985dbea4898960cd6a0fed9a4e53cd1cb6ca8c351f23f7a9fab8089702e52d3b8857503 WHIRLPOOL 6843f409e1063728ed58844cad5673e1354d7f9dbc09a510da11afc7ad3ec38d663239e7d5f2d257839c47ea6dc50e490b7e8742198224dc31253dc28f891373
-MISC ChangeLog 13527 SHA256 136fc4f1b37c7d460d3d76cc9bf070b90eee8867e62f12f6975afb9f939613b4 SHA512 e68b8f24ead3dcae296a598783db3acb6a4f52989eca5e14db6249f44c15922dc19e382e660d2034cbd3aabd0e5be50faf439a706a785583169696782af4bd9f WHIRLPOOL ec5a7aee50ff0a126eba2a89dc274f0530c85325cf815a85ebe6c6338bd81532665f6df6020977c2685933d4ccddda25962debe895cfcbf35812087ef88b18b4
+MISC ChangeLog 13667 SHA256 a65dd1dd81357bce689726d3330aa5094b0855dd7205f9050a01a2eee150c854 SHA512 91c314218e94978e52543981c39c13e065a7012ab7d0c18f46428d0fcfd1c993d6cbf02d663a0f8351038f546bfaf19d21f8cdb6d04ccb8ba58b3c221cc29e22 WHIRLPOOL b1a8802de4cc2e976130b78e7adf8769a3dd1801acdedb976545ad380ff6cb4a3be81f63ab9c632ae5121378bf5957522b90f26c702ea2a509b8f31069fe04ab
 MISC metadata.xml 224 SHA256 7d1302c10f9b1a8ea6ce22057fa87754cbe057e6066f24086cffa88cdfc6e534 SHA512 75d2946bbfa18966b6d66b9bc23eb6d0664a68e63b02467ae9639faec9deaaec9912b88cc0130e55b31e6ae11b509e70a3f2b9ba5a8da25d6019806ffeeb9b59 WHIRLPOOL bc83aa4ec14d183b70b9064c5c950b3a38644e548d9101d363440189372469e44b62f53e386a6d8744f28312dee0ead2d107c4bc52a872fe757eb2d632afb413
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTuE1KXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcUm4P/0E8hBA8kFSha0f89eENXgW1
-P3YESrDNwUqCzbuZDL1QxDX/kTojRm/ZMe8fFBVojz9NRikHerH8AkFO22TENCGe
-TLu5QOaI84dcQ+NzHvlh5sCyXsZoFn3/2Vy/Y1EjYkTYvPRK2vqdhB9BarLv3jgb
-WZzK9FkeOYB6l1SEm1ShkmhyYXg2wPyDmqIiMyvK9i+BDzOwQFUaaZZ/mfvc0gcl
-xlz2uT1MSjIsqV9Ft6uByP4p8iJYLgls7tVwvIGxtootX/pBR/3aLzGWQVAGYeUM
-jTncQRW34TnvoGkn030+aDSx0Qc1yLzY3QRcfC7BIDkq4llFLRrWZ8iwKfIIq55r
-sJASR+aFihuWlu4pAX0LRn9TvUJ9JQAplJX79jqOeZtnJK23DrV83eainFdsPfCu
-srXtYgMZyQXdx1Xty2GdWpPDPVpkY6c6ZiHIP7SAiGApE2/TA7h4uZZcTJTebWU7
-RZPV3rLgAsfxc5wdvyzeulWCs8+1Gzugl8+bQA0EVvo9qCufK1YmzWBzK15n/plz
-fA8FMA5eduFdkOAEACdT8fmKlXPa6ezACWDtSIVDxsusHnDJcuQAFKOGcP8/mv+3
-bUSqwRzMS1K8gbaYTCJiKsJh+d1fb6vdIaY84hJgkAXMPq9Ji+Jp501iS2zSbMl4
-8pPhWLAwmUDjLLpsFIL6
-=gf71
+iJwEAQEIAAYFAlO4ZNgACgkQG9wOWsQutdbCfgP9Fmcm/WPfaHKAL6TcJpQ4M/Z4
+LqXggxEn+C+iA1fvevxxqdZL3pY5kwxVHVoYNUU74b3swso3EUqybkm/55T1AFDG
+s0ZBgpZtY45aX0nTyxSFwF2BC9rG1ppbKNlCxOkS44WjgdjRK5ne9+nBoNjfr6vk
+Jxl4i9Fet8ZBZ2Dzlns=
+=wqQ9
 -----END PGP SIGNATURE-----
