@@ -2,9 +2,9 @@ DEFINED_PHASES=install
 DESCRIPTION=User land tool for cleaning up old perl installs
 EAPI=5
 HOMEPAGE=http://www.gentoo.org/proj/en/perl/
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=alpha amd64 arm ~arm64 ~hppa ia64 ~m68k ~mips ppc ppc64 s390 ~sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=app-shells/bash || ( >=sys-apps/coreutils-8.15 app-misc/realpath sys-freebsd/freebsd-bin ) dev-lang/perl
 SLOT=0
 SRC_URI=mirror://gentoo/perl-cleaner-2.15.tar.bz2
-_md5_=4a62c6370b2a5fdac78404abdbf37ec2
+_md5_=7e8a5ae3e12481f42cd748e86e13016b
