@@ -4,10 +4,10 @@ DESCRIPTION=Cronie is a standard UNIX daemon cron based on the original vixie-cr
 EAPI=5
 HOMEPAGE=https://fedorahosted.org/cronie/wiki
 IUSE=anacron +inotify pam selinux
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
 LICENSE=ISC BSD BSD-2 GPL-2
 RDEPEND=pam? ( virtual/pam ) anacron? ( !sys-process/anacron ) >=sys-process/cronbase-0.3.2 !sys-process/vixie-cron !sys-process/bcron !sys-process/dcron !sys-process/fcron
 SLOT=0
 SRC_URI=https://fedorahosted.org/releases/c/r/cronie/cronie-1.4.11.tar.gz
 _eclasses_=cron	18adefe7a7b2f043ca5b63e912835970	eutils	76fc3c462065bb4ca959f939e6793f94	flag-o-matic	c7bef10bac37ea4947ad688fd0d29b25	multilib	fac675dcccf94392371a6abee62d909f	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	1a9ecf501027961855b0320e8915a79c
-_md5_=814fe9c787df686cb3dd639d126ef91b
+_md5_=4186fa00aace64802b285a49c78ad505
