@@ -9,23 +9,15 @@ AUX cronie-1.3-initd 395 SHA256 292a7b20fe33bd027357475fea6aa1194afa7e5c1c47a852
 AUX cronie-1.4.3-pamd 231 SHA256 c281c9b8fb4984e20142a7e099d7032192d5c2ca2eb02ece5eb4f73ca64593dd SHA512 32268d8b097e60eb039c023647ecd651b6940a8fe1587111ce0d49314bbb2de451214f98b7b703fd284e231c10bc4e616d4d0c63c107d9cdbc2bb470a17f2c3a WHIRLPOOL 171dbaa3a49aec2731d1cd78a1a4168369a1a0596b98049fd9c026ab9af54e97fdcf81416fa4fe8201c232dcdf891c4d3e81da20ddfa103eae458094c2095424
 DIST cronie-1.4.11.tar.gz 222665 SHA256 fd08084cedddbb42499f80ddb7f2158195c3555c2ff40ee11d4ece2f9864d7be SHA512 acf998642266f812dfa5a00737f72ae2d36dfab9edddd3d99a9f6545415f7f6dc980d1401ec8a39b865cf54336853f190d3c542be3281dc368e0d5bc5c7f3e5f WHIRLPOOL 243e145b25928d4cdca22f3c85a6aa9a99e8dca239684debf4fd382bdc25945123054ac0b54e609d882550aae08eda7d8202ab29a7f122b5555b0807666edb19
 EBUILD cronie-1.4.11-r1.ebuild 2078 SHA256 7903088ac3ee221184a86184f9c754d6ab6f93b2b3f5548f719e999279e07a5a SHA512 188b064e47f837f720721477bf11a941e14ca493ad43979f15032f7b1e0af67694637a4ad73beb0ff18b99e6bb963592114cc91432667f5f4e551366a8daba1d WHIRLPOOL 164c6f03be7848b1a20a45df607492cf6a804bf0cb0f6a0f218450c6417ed5d72449f58ce9f8ee3cd50d3c0a58e1f72e9977e280e87cb685618ee24c70c7aa26
-EBUILD cronie-1.4.11-r3.ebuild 2025 SHA256 269b59fc2bee7371d395f4654296d97d43c238845e87c11efe4e13ad933cd27e SHA512 2ca38938caf775fe3e2f24e0f504465047e17c92e1b5e4cbc8745dc9387c3b285b5dbe522ca0a005f32eaf87c758dfdd47201fcfc0ab63a3464c2be8373e6302 WHIRLPOOL 7b1527707047f32b59480b300375882b52d0bbf4833ce23378008c5a2805ec49bebbe5d5bc4124a5346959d2d7596ee88ffc1f7542d6c9a48a69a6f951b36007
-MISC ChangeLog 8821 SHA256 0d6d1ced450aef6fd85012e998b57b558173a60a6a59899d4a5dbf87148fd918 SHA512 03e47eebac952d3b64ec790d3d48ef234c714d06373d96792fdbbf5f234c476eec6f4a54bb5ab66375e6351d94c6b444d242185d523dc43429457ea8cafe6288 WHIRLPOOL 97642cf6a50e322b93faef46443a8dbb9790bf0defc397132d6b4726178c240d6c9540fecf59d5647826faa011eb45f8388341131bbe03f25e7489ec6de55d52
+EBUILD cronie-1.4.11-r3.ebuild 2026 SHA256 4271c95ec1874aaacc5367cc8b1a0b4f480471567ac745490b5af30abadda351 SHA512 7b4b5533160e830cbb203a9b5d8bb26e73aa8a35b92bf5b65fc866ff1a0515bc070f678970dea15a03affe119dd20931290cf3bb803f53a7daeada7e8da97593 WHIRLPOOL 6fc5e1df0efba52517de6e6a9c0683e9c5238a77ee8ca33fcffd28fb46876681147315f153cc5f9f426a379a9a8b4571530884b0427ed414fe664f82ab8a3263
+MISC ChangeLog 8928 SHA256 b1a20c5989ea783158fd4e86100827eb4c65963a20a7bcf5f22ab489b1cb6743 SHA512 9165a9201f6c0e5aac94aa845ba5b747bd7dca3ea2ad927422db5527b7d671d3d32ac52f04e2faab845025a120ac404713872badc2e4eb58eedfb22d20bac931 WHIRLPOOL 2ad443c4da3e899146293242e0099f6914d4cd7bfc330c2c3fcf413a1470ef1c036ff3f9cf8bc70c76fbbb61122a330a14e42663b95afdcd3525af80164951a7
 MISC metadata.xml 799 SHA256 fe8f004016da48f9eaf570c4777bd407f210d468e8779d8db538b5fa1f0dad7d SHA512 9bae8c4edf33af2e6d25aa9db003d40525895dc21ca3388a303a7bba851a0bbe46ac0d254e0aa9c84da8f5c1d2b0e0042e1e317f717c1bd53fe388849366da82 WHIRLPOOL a9e7f4565bc909bc44dc4b676edc48794e8da7235a33b9289fcf53de65fb3406662560588d80fbed90873a9a56fcf00a0ec03fd80325ec2c8e56b9a38b66e01a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTUSeoAAoJEPiazRVxLXTFA28QALAOBddxksW2U096cTB81J1y
-9dyXwE3Coy3ScCYSeG6v5yF91nuCuLq/LkTuM2pYOX8J+77UTcRJbbVJldckcj01
-kPB09E4Sdf7zENc919z36RbfAs3OSSBqxYsWIPLkFNWJbfI2gJJbJM80t5kgKjFf
-NMlT8pfsNI4mB+L01kHoMqvQi8i6h/KiaR/2vppEIxciRIClC+o/OqBSeBSa8MEA
-0OQ2/mCTQp2X2fKythhr++ouj/SbMs+Fcw8fD8bwpn3zXXkm1Zsk933xFY/KyTSI
-PO1NZF15wTfiZy3R+BmH5dZoUCMq2J8E1ZI07NZcO0dRkjCXPQSwtU+ebYhsUdC4
-UB6cBqblnG1SsQfJww7+zWpnqif8yqMWIVR7jiefcslACvqZE7vmdnx4KKpI5oiH
-cjrpkXKZJRPVmcrHN7rwQJMCx+7TJaZUBDbao2cyQdi6ZDCMlHXR3yUT1aDGDmkr
-9w0S3iLvuDzRAjBw+WayBRvvjvLZ9gSIAuVNYx1PVu9g6+Li6ZSxwy9gzg6iE7yL
-aGD8DZ/0OVaMNoKbUES/vkwFvMLvA04pnQNJCj4zrRmPjxpUl2i6+NgFsf00XJ5E
-x6rZOuIl9KfuYpx/44zew2aOp3eh7rqnqDVq79MYViNFLgu3ecfOr1Qg5+yuLw4T
-CV0f2wReJMWqE+KqxpDD
-=aQav
+iJwEAQEIAAYFAlO4YzUACgkQG9wOWsQutdZHLQP9E9z8dyz+ZNgWlndTUA5Zwlv5
+oPdQ/J32z/gD/FahNjQP5Pc3vS2UPPmZ80kD64nVARU+Jq72K7Q0mtilj7J3N5Ct
+g3P5i71bokK05YOCj7Wax+b7DGt+S4tpwRcwg+x/F22qZ08rypP6FqaV5kKK8k9I
+kQ67Nf/H5auSleCb+rk=
+=Y0yk
 -----END PGP SIGNATURE-----
