@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/cronie
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.54 2014/04/18 13:24:54 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.55 2014/07/05 20:37:08 zlogene Exp $
+
+  05 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> cronie-1.4.11-r3.ebuild:
+  Add ~s390 keyword wrt bug #497394
 
 *cronie-1.4.11-r3 (18 Apr 2014)
 
