@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/perl-cleaner
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.97 2014/07/05 19:08:52 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.98 2014/07/05 20:44:08 zlogene Exp $
+
+  05 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.15.ebuild:
+  alpha/amd64/arm/ia64/ppc/ppc64/s390/x86 stable wrt bug #516462
 
 *perl-cleaner-2.15 (05 Jul 2014)
 
